down grade java version from 17 to 11